# wxocr

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose-simple.yml  package-lock.json  pyproject.toml  requirements.txt
src/wxocr/: __init__.py
src/wxocr/lib/: db.py  schema.sql  wxocr.py  wxocr.sqlite
src/wxocr/route/: index.py  ocr.py
src/wxocr/templates/: index.html  ocr.html
